add multilingual support

--- a/frontend/src/locales/bn/common.json
+++ b/frontend/src/locales/bn/common.json
@@ -11,18 +11,278 @@
   },
   "header_title": "কৃষিমিত্র ড্যাশবোর্ড",
   "header_subtitle": "{{location}} এর জন্য স্মার্ট কৃষি ঝুঁকি মূল্যায়ন এবং পরামর্শ",
+  "greeting": "নমস্কার, {{name}}!",
+  "welcome_message": "আজকে স্মার্ট কৃষিকাজের জন্য একটি দুর্দান্ত দিন করি",
   "tabs": {
     "risk": "ঝুঁকি মূল্যায়ন",
     "disease": "রোগ সনাক্তকরণ",
     "fertilizer": "সার পরামর্শদাতা",
-    "advisory": "স্থানীয় পরামর্শ",
+    "advisory": "ফসল সুপারিশ",
     "chat": "চ্যাটবট"
+  },
+  "risk_dashboard": {
+    "current_weather": "বর্তমান আবহাওয়ার অবস্থা",
+    "weather_description": "{{location}} এর জন্য রিয়েল-টাইম আবহাওয়া ডেটা",
+    "temperature": "তাপমাত্রা",
+    "humidity": "আর্দ্রতা",
+    "wind_speed": "বাতাসের গতি",
+    "rainfall": "বৃষ্টিপাত",
+    "risk_distribution": "ঝুঁকি বিতরণ সংক্ষিপ্ত বিবরণ",
+    "risk_distribution_description": "আপনার সমস্ত ফসলের বর্তমান ঝুঁকির মাত্রা",
+    "crop_risk_assessment": "ফসলের ঝুঁকি মূল্যায়ন",
+    "crop_risk_description": "আপনার এলাকার ফসলের জন্য বর্তমান ঝুঁকির মাত্রা",
+    "risk_level": "ঝুঁকির মাত্রা",
+    "low_risk": "কম ঝুঁকি",
+    "medium_risk": "মাঝারি ঝুঁকি",
+    "high_risk": "উচ্চ ঝুঁকি",
+    "loading": "আবহাওয়া ডেটা লোড হচ্ছে...",
+    "error": "আবহাওয়া ডেটা লোড করতে ব্যর্থ",
+    "no_data": "কোন আবহাওয়া ডেটা উপলব্ধ নেই",
+    "chart_risk_level": "ঝুঁকির মাত্রা (%)",
+    "chart_crop": "ফসল:",
+    "chart_risk_level_short": "ঝুঁকির মাত্রা",
+    "potential_threats": "সম্ভাব্য হুমকি:",
+    "specific_recommendations": "নির্দিষ্ট সুপারিশ",
+    "threats": {
+      "frost_damage": "তুষারপাত ক্ষতির ঝুঁকি",
+      "cold_stress": "ঠান্ডার চাপ",
+      "heat_stress": "তাপের চাপ",
+      "temperature_stress": "তাপমাত্রার চাপ",
+      "pest_disease": "পোকামাকড় ও রোগের ঝুঁকি",
+      "fungal_disease": "ছত্রাক রোগের ঝুঁকি",
+      "drought_stress": "খরার চাপ",
+      "weather_stress": "আবহাওয়া সংক্রান্ত চাপ"
+    },
+    "probability": {
+      "high": "উচ্চ",
+      "medium": "মাঝারি",
+      "low": "কম"
+    },
+    "optimal": "সর্বোত্তম:",
+    "categories": {
+      "irrigation": "সেচ",
+      "pest_alert": "পোকামাকড়ের সতর্কতা",
+      "harvest_tips": "ফসল কাটার পরামর্শ",
+      "fertilizer_tips": "সারের পরামর্শ",
+      "crop_health": "ফসলের স্বাস্থ্য"
+    }
+  },
+  "chatbot": {
+    "assistant_name": "কৃষি সহায়ক",
+    "assistant_description": "আপনার কৃষিকাজের সাথী",
+    "placeholder": "কৃষিকাজ সম্পর্কে জিজ্ঞাসা করুন... 🌱",
+    "tooltip": "কৃষিকাজ সম্পর্কে আমাকে যেকোনো কিছু জিজ্ঞাসা করুন! 🌱",
+    "thinking": "চিন্তা করছি...",
+    "send": "পাঠান"
   },
   "chat": {
     "title": "কৃষিমিত্রকে জিজ্ঞাসা করুন",
     "placeholder": "ফসল, আবহাওয়া, কীটপতঙ্গ, মাটি সম্পর্কে জিজ্ঞাসা করুন...",
     "send": "পাঠান",
     "empty": "শুরু করতে একটি প্রশ্ন জিজ্ঞাসা করুন"
+  },
+  "disease_detection": {
+    "title": "উদ্ভিদ রোগ সনাক্তকরণ",
+    "description": "বিশ্লেষণের জন্য আক্রান্ত উদ্ভিদের একটি স্পষ্ট ছবি আপলোড করুন",
+    "upload_label": "রোগ সনাক্তকরণের জন্য উদ্ভিদের ছবি আপলোড করুন",
+    "click_upload": "উদ্ভিদের ছবি আপলোড করতে ক্লিক করুন",
+    "drag_drop": "অথবা টেনে এনে ছেড়ে দিন",
+    "file_support": "সমর্থিত: JPG, PNG, WEBP (সর্বোচ্চ 10MB)",
+    "preview": "পূর্বরূপ",
+    "reset": "রিসেট",
+    "analyze": "ছবি বিশ্লেষণ করুন",
+    "analyzing": "বিশ্লেষণ হচ্ছে...",
+    "tips_title": "📸 সর্বোত্তম ফলাফলের জন্য টিপস:",
+    "tips": {
+      "lighting": "ভাল আলো: প্রাকৃতিক দিনের আলোতে ছবি তুলুন, ফ্ল্যাশ এড়িয়ে চলুন",
+      "focus": "স্পষ্ট ফোকাস: আক্রান্ত এলাকা তীক্ষ্ণ এবং ফোকাসে আছে তা নিশ্চিত করুন",
+      "closeup": "ক্লোজ-আপ শট: রোগাক্রান্ত পাতা বা উদ্ভিদের অংশ দিয়ে ফ্রেম পূর্ণ করুন",
+      "context": "প্রসঙ্গ অন্তর্ভুক্ত করুন: তুলনার জন্য আক্রান্ত এবং সুস্থ উভয় অংশ দেখান",
+      "shadows": "ছায়া এড়িয়ে চলুন: উদ্ভিদে কোন ছায়া, ঝলক বা প্রতিফলন নেই",
+      "angles": "একাধিক কোণ: লক্ষণ ভিন্ন হলে বিভিন্ন কোণ থেকে ছবি তুলুন"
+    },
+    "no_image": "কোন ছবি নির্বাচিত নেই",
+    "no_image_desc": "বিশ্লেষণের জন্য একটি ছবি আপলোড করুন",
+    "auth_required": "প্রমাণীকরণ প্রয়োজন। অনুগ্রহ করে লগ ইন করুন।",
+    "analysis_complete": "বিশ্লেষণ সম্পূর্ণ",
+    "analysis_failed": "বিশ্লেষণ ব্যর্থ",
+    "detected": "সনাক্ত করা হয়েছে:",
+    "analysis_failed_desc": "একটি অপ্রত্যাশিত ত্রুটি ঘটেছে",
+    "no_results": "এখনও কোন বিশ্লেষণ ফলাফল নেই",
+    "no_results_desc": "উদ্ভিদের রোগ সনাক্ত করতে একটি ছবি আপলোড করুন এবং \"বিশ্লেষণ\" এ ক্লিক করুন",
+    "confidence": "আত্মবিশ্বাস:",
+    "treatment": "চিকিৎসা",
+    "prevention": "প্রতিরোধ",
+    "treatment_note": "সর্বোত্তম ফলাফলের জন্য অবিলম্বে চিকিৎসা প্রয়োগ করুন। সর্বদা পণ্যের নির্দেশাবলী অনুসরণ করুন এবং সম্ভব হলে জৈব বিকল্পগুলি বিবেচনা করুন।",
+    "fallback_treatment": "নির্দিষ্ট চিকিৎসার সুপারিশের জন্য কৃষি বিশেষজ্ঞদের সাথে পরামর্শ করুন",
+    "fallback_prevention_1": "ভাল কৃষি অনুশীলন অনুসরণ করুন",
+    "fallback_prevention_2": "নিয়মিত পর্যবেক্ষণ এবং পরিদর্শন",
+    "fallback_description": "সনাক্ত করা হয়েছে। নির্দিষ্ট চিকিৎসার সুপারিশের জন্য অনুগ্রহ করে কৃষি বিশেষজ্ঞদের সাথে পরামর্শ করুন।"
+  },
+  "fertilizer_recommendation": {
+    "title": "ফসল ও মাটির তথ্য",
+    "description": "আপনার ফসল এবং মাটির অবস্থার বিস্তারিত তথ্য প্রবেশ করান",
+    "crop_type": "ফসলের ধরন",
+    "soil_type": "মাটির ধরন",
+    "growth_stage": "বৃদ্ধির পর্যায়",
+    "select_crop": "ফসল নির্বাচন করুন",
+    "select_soil_type": "মাটির ধরন নির্বাচন করুন",
+    "select_growth_stage": "বৃদ্ধির পর্যায় নির্বাচন করুন",
+    "temperature": "তাপমাত্রা (°C)",
+    "humidity": "আর্দ্রতা (%)",
+    "soil_moisture": "মাটির আর্দ্রতা (%)",
+    "nitrogen": "নাইট্রোজেন (N)",
+    "phosphorous": "ফসফরাস (P)",
+    "potassium": "পটাশিয়াম (K)",
+    "soil_ph": "মাটির pH",
+    "acidic": "অম্লীয় (4.0)",
+    "neutral": "নিরপেক্ষ (7.0)",
+    "alkaline": "ক্ষারীয় (9.0)",
+    "additional_notes": "অতিরিক্ত মন্তব্য (ঐচ্ছিক)",
+    "additional_notes_placeholder": "আপনার জমি সম্পর্কে অন্য কোন তথ্য...",
+    "reset": "রিসেট",
+    "generate_recommendations": "সুপারিশ তৈরি করুন",
+    "generating": "তৈরি হচ্ছে...",
+    "missing_info": "তথ্য অনুপস্থিত",
+    "missing_info_desc": "অনুগ্রহ করে সমস্ত প্রয়োজনীয় ক্ষেত্র পূরণ করুন",
+    "recommendations_ready": "সুপারিশ প্রস্তুত",
+    "recommendations_ready_desc": "ব্যাকএন্ড মডেল থেকে প্রাপ্ত",
+    "error": "ত্রুটি",
+    "prediction_failed": "পূর্বাভাস ব্যর্থ",
+    "fertilizer_recommendations": "সার সুপারিশ",
+    "based_on": "{{soilType}} মাটিতে {{growthStage}} পর্যায়ে বৃদ্ধিপ্রাপ্ত {{cropType}} এর উপর ভিত্তি করে",
+    "soil_analysis": "মাটি বিশ্লেষণ",
+    "fertilizer_plan": "সার পরিকল্পনা",
+    "soil_nutrient_status": "মাটির পুষ্টি উপাদানের অবস্থা",
+    "soil_nutrient_desc": "বিশ্লেষণ পুষ্টি উপাদানের ঘাটতি দেখায় যা একটি সুষম সার প্রয়োগ পরিকল্পনা দিয়ে সমাধান করা প্রয়োজন।",
+    "soil_ph_status": "মাটির pH: {{ph}} - {{status}}",
+    "ph_acidic": "অম্লীয়",
+    "ph_optimal": "সর্বোত্তম",
+    "ph_alkaline": "ক্ষারীয়",
+    "ph_acidic_advice": "ভাল পুষ্টি উপাদান প্রাপ্যতার জন্য pH বৃদ্ধির জন্য কৃষি চুন প্রয়োগ বিবেচনা করুন।",
+    "ph_alkaline_advice": "ভাল পুষ্টি উপাদান প্রাপ্যতার জন্য pH কমানোর জন্য সালফার বা অম্লীকরণ সংশোধন প্রয়োগ বিবেচনা করুন।",
+    "ph_optimal_advice": "বর্তমান pH বেশিরভাগ ফসলের জন্য সর্বোত্তম এবং ভাল পুষ্টি উপাদান প্রাপ্যতার অনুমতি দেয়।",
+    "recommended_fertilizer": "প্রস্তাবিত সার",
+    "composition": "গঠন",
+    "purpose": "উদ্দেশ্য",
+    "best_for": "সেরা জন্য",
+    "usage_tip": "ব্যবহারের পরামর্শ",
+    "avoid": "এড়িয়ে চলুন",
+    "application_details": "প্রয়োগের বিবরণ",
+    "application_rate": "প্রয়োগের হার",
+    "timing": "সময়",
+    "method": "পদ্ধতি",
+    "key_benefits": "মূল সুবিধা",
+    "no_recommendations": "এখনও কোন সুপারিশ নেই",
+    "no_recommendations_desc": "আপনার নির্দিষ্ট অবস্থার উপর ভিত্তি করে ব্যক্তিগত সার সুপারিশ পেতে ফসল এবং মাটির তথ্য ফর্ম পূরণ করুন।",
+    "optimized_nutrition": "অনুকূলিত পুষ্টি",
+    "optimized_nutrition_desc": "আপনার ফসলের প্রয়োজন অনুযায়ী",
+    "economic_benefits": "অর্থনৈতিক সুবিধা",
+    "economic_benefits_desc": "বর্জ্য এবং খরচ কমান",
+    "sustainable_practices": "টেকসই অনুশীলন",
+    "sustainable_practices_desc": "পরিবেশ বান্ধব",
+    "higher_yields": "উচ্চ ফলন",
+    "higher_yields_desc": "ফসল উৎপাদন সর্বোচ্চ করুন",
+    "nutrient_status": {
+      "low": "কম",
+      "medium": "মাঝারি",
+      "optimal": "সর্বোত্তম",
+      "high": "উচ্চ"
+    },
+    "crops": {
+      "maize": "ভুট্টা",
+      "sugarcane": "আখ",
+      "cotton": "তুলা",
+      "tobacco": "তামাক",
+      "paddy": "ধান",
+      "barley": "যব",
+      "wheat": "গম",
+      "millets": "বাজরা",
+      "oil_seeds": "তেল বীজ",
+      "pulses": "ডাল",
+      "ground_nuts": "চিনাবাদাম"
+    },
+    "soil_types": {
+      "sandy": "বালুকাময়",
+      "loamy": "দোআঁশ",
+      "black": "কালো",
+      "red": "লাল",
+      "clayey": "এঁটেল"
+    },
+    "growth_stages": {
+      "seedling": "চারা",
+      "vegetative": "উদ্ভিদ",
+      "flowering": "ফুল",
+      "fruiting": "ফল",
+      "maturity": "পরিপক্বতা"
+    }
+  },
+  "crop_recommendation": {
+    "title": "মাটি ও জলবায়ু তথ্য",
+    "description": "ব্যক্তিগত ফসল সুপারিশের জন্য আপনার ক্ষেতের অবস্থা প্রবেশ করান",
+    "nitrogen": "নাইট্রোজেন (N)",
+    "phosphorus": "ফসফরাস (P)",
+    "potassium": "পটাশিয়াম (K)",
+    "temperature": "তাপমাত্রা (°C)",
+    "humidity": "আর্দ্রতা (%)",
+    "soil_ph": "মাটির pH",
+    "rainfall": "বৃষ্টিপাত (mm)",
+    "reset": "রিসেট",
+    "get_recommendation": "সুপারিশ পান",
+    "analyzing": "বিশ্লেষণ করা হচ্ছে...",
+    "missing_info": "তথ্য অনুপস্থিত",
+    "missing_info_desc": "অনুগ্রহ করে সমস্ত প্রয়োজনীয় ক্ষেত্র পূরণ করুন",
+    "recommendation_ready": "সুপারিশ প্রস্তুত",
+    "recommendation_ready_desc": "ফসল সুপারিশ সফলভাবে তৈরি",
+    "error": "ত্রুটি",
+    "failed_recommendation": "সুপারিশ পেতে ব্যর্থ",
+    "crop_recommendation": "ফসল সুপারিশ",
+    "based_on_conditions": "আপনার মাটি এবং জলবায়ু অবস্থার উপর ভিত্তি করে",
+    "recommendation_tab": "সুপারিশ",
+    "details_tab": "বৃদ্ধির বিবরণ",
+    "recommended_crop": "প্রস্তাবিত ফসল",
+    "growing_seasons": "বৃদ্ধির মৌসুম",
+    "water_needs": "পানির প্রয়োজন",
+    "suitability": "উপযুক্ততা",
+    "match": "মিল",
+    "agricultural_insights": "কৃষি অন্তর্দৃষ্টি",
+    "strategic_advantages": "কৌশলগত সুবিধা",
+    "soil_conditions_analysis": "মাটির অবস্থা বিশ্লেষণ",
+    "climate_conditions": "জলবায়ু অবস্থা",
+    "farming_recommendations": "কৃষি সুপারিশ",
+    "farming_tips": [
+      "মাটির আর্দ্রতার মাত্রা নিয়মিত পর্যবেক্ষণ করুন",
+      "প্রস্তাবিত সার প্রয়োগের সময়সূচী অনুসরণ করুন",
+      "সমন্বিত কীটপতঙ্গ ব্যবস্থাপনা অনুশীলন বাস্তবায়ন করুন",
+      "মাটির স্বাস্থ্যের জন্য ফসল আবর্তন বিবেচনা করুন",
+      "স্থানীয় কৃষি সম্প্রসারণ সেবার সাথে পরামর্শ করুন"
+    ],
+    "no_recommendation": "এখনও কোন সুপারিশ নেই",
+    "no_recommendation_desc": "মেশিন লার্নিং বিশ্লেষণের উপর ভিত্তি করে ব্যক্তিগত ফসল সুপারিশ পেতে আপনার মাটি এবং জলবায়ু অবস্থা প্রবেশ করান।",
+    "ai_analysis": "AI-চালিত বিশ্লেষণ",
+    "ai_analysis_desc": "মেশিন লার্নিং সুপারিশ",
+    "personalized_results": "ব্যক্তিগত ফলাফল",
+    "personalized_results_desc": "আপনার অবস্থার উপর ভিত্তি করে",
+    "detailed_insights": "বিস্তারিত অন্তর্দৃষ্টি",
+    "detailed_insights_desc": "বৃদ্ধির টিপস এবং সুবিধা",
+    "expert_knowledge": "বিশেষজ্ঞ জ্ঞান",
+    "expert_knowledge_desc": "কৃষি সর্বোত্তম অনুশীলন",
+    "suitability_levels": {
+      "excellent": "চমৎকার",
+      "good": "ভাল",
+      "average": "গড়",
+      "poor": "খারাপ"
+    },
+    "water_requirements": {
+      "low": "কম",
+      "medium": "মাঝারি",
+      "high": "উচ্চ"
+    },
+    "fallback": {
+      "growing_season": "স্থানীয় কৃষি বিশেষজ্ঞের সাথে পরামর্শ করুন",
+      "special_notes": "ডেটাবেসে ফসলের তথ্য উপলব্ধ নেই",
+      "benefits": ["ML মডেল সুপারিশ", "আপনার মাটির অবস্থার জন্য উপযুক্ত"]
+    }
   },
   "lang": {
     "label": "ভাষা",
