--- a/frontend/src/locales/hi/common.json
+++ b/frontend/src/locales/hi/common.json
@@ -11,18 +11,293 @@
   },
   "header_title": "कृषिमित्र डैशबोर्ड",
   "header_subtitle": "{{location}} के लिए स्मार्ट कृषि जोखिम मूल्यांकन और सलाह",
+  "greeting": "नमस्ते, {{name}}!",
+  "welcome_message": "आइए आज को स्मार्ट खेती के लिए एक शानदार दिन बनाते हैं",
   "tabs": {
     "risk": "जोखिम मूल्यांकन",
     "disease": "रोग पहचान",
     "fertilizer": "उर्वरक सलाहकार",
-    "advisory": "स्थानीय परामर्श",
+    "advisory": "फसल सिफारिश",
     "chat": "चैटबॉट"
+  },
+  "risk_dashboard": {
+    "current_weather": "वर्तमान मौसम स्थितियां",
+    "weather_description": "{{location}} के लिए वास्तविक समय मौसम डेटा",
+    "temperature": "तापमान",
+    "humidity": "आर्द्रता",
+    "wind_speed": "हवा की गति",
+    "rainfall": "वर्षा",
+    "risk_distribution": "जोखिम वितरण अवलोकन",
+    "risk_distribution_description": "आपकी सभी फसलों में वर्तमान जोखिम स्तर",
+    "crop_risk_assessment": "फसल जोखिम मूल्यांकन",
+    "crop_risk_description": "आपके क्षेत्र में फसलों के लिए वर्तमान जोखिम स्तर",
+    "risk_level": "जोखिम स्तर",
+    "low_risk": "कम जोखिम",
+    "medium_risk": "मध्यम जोखिम",
+    "high_risk": "उच्च जोखिम",
+    "loading": "मौसम डेटा लोड हो रहा है...",
+    "error": "मौसम डेटा लोड करने में विफल",
+    "no_data": "कोई मौसम डेटा उपलब्ध नहीं",
+    "chart_risk_level": "जोखिम स्तर (%)",
+    "chart_crop": "फसल:",
+    "chart_risk_level_short": "जोखिम स्तर",
+    "potential_threats": "संभावित खतरे:",
+    "specific_recommendations": "विशिष्ट सिफारिशें",
+    "threats": {
+      "frost_damage": "पाला क्षति जोखिम",
+      "cold_stress": "ठंड का तनाव",
+      "heat_stress": "गर्मी का तनाव",
+      "temperature_stress": "तापमान तनाव",
+      "pest_disease": "कीट और रोग जोखिम",
+      "fungal_disease": "फंगल रोग जोखिम",
+      "drought_stress": "सूखे का तनाव",
+      "weather_stress": "मौसम संबंधी तनाव"
+    },
+    "probability": {
+      "high": "उच्च",
+      "medium": "मध्यम",
+      "low": "कम"
+    },
+    "optimal": "इष्टतम:",
+    "categories": {
+      "irrigation": "सिंचाई",
+      "pest_alert": "कीट चेतावनी",
+      "harvest_tips": "फसल काटने की सलाह",
+      "fertilizer_tips": "उर्वरक सलाह",
+      "crop_health": "फसल स्वास्थ्य"
+    }
+  },
+  "chatbot": {
+    "assistant_name": "कृषि सहायक",
+    "assistant_description": "आपका खेती साथी",
+    "welcome_message": "नमस्ते! मैं आपका AI कृषि सहायक हूं। खेती, फसलों, उर्वरकों, कीट प्रबंधन, या कृषि सर्वोत्तम प्रथाओं के बारे में कुछ भी पूछें।",
+    "placeholder": "फसलों, उर्वरकों, कीट प्रबंधन, मौसम के बारे में पूछें...",
+    "tooltip": "खेती के बारे में कुछ भी पूछें! ",
+    "thinking": "AI सोच रहा है...",
+    "send": "भेजें",
+    "response_generated": "उत्तर तैयार",
+    "response_desc_with_sources": "{{latency}}ms में {{count}} स्रोत प्राप्त किए",
+    "response_desc_fallback": "आपका कृषि मार्गदर्शन मिल गया!",
+    "error": "त्रुटि",
+    "error_desc": "AI सहायक से उत्तर प्राप्त करने में विफल",
+    "error_message": "मुझे खुशी है, लेकिन आपके प्रश्न को संसाधित करते समय एक त्रुटि हुई। कृपया पुनः प्रयास करें या यदि समस्या बनी रहे तो सहायता से संपर्क करें। त्रुटि: {{error}}",
+    "fallback_responses": {
+      "wheat": "गेहूं भारत में रबी सीजन (अक्टूबर-मार्च) के दौरान सबसे अच्छा उगाया जाता है। मुख्य बिंदु:\n\n• **बुवाई**: अक्टूबर-दिसंबर\n• **तापमान**: 15-25°C इष्टतम\n• **वर्षा**: 300-400mm आवश्यक\n• **मिट्टी**: अच्छी जल निकासी वाली दोमट मिट्टी, pH 6.0-7.5\n• **कटाई**: मार्च-अप्रैल\n\nगेहूं को दाना भरने के दौरान ठंडे, सूखे मौसम की आवश्यकता होती है। परिपक्वता के दौरान अत्यधिक नमी से बचें।",
+      "rice": "चावल मुख्यतः खरीफ सीजन (जून-नवंबर) के दौरान उगाया जाता है। विवरण:\n\n• **बुवाई**: जून-जुलाई\n• **तापमान**: 20-35°C\n• **वर्षा**: 1000-2000mm\n• **मिट्टी**: चिकनी, जलभराव की स्थिति\n• **कटाई**: अक्टूबर-नवंबर\n\nचावल को उच्च आर्द्रता और खड़े पानी की आवश्यकता होती है। रोपाई बुवाई के 20-25 दिन बाद की जाती है।",
+      "fertilizer": "सामान्य उर्वरक सिफारिशें:\n\n• **NPK अनुपात**: फसल और मिट्टी परीक्षण के अनुसार अलग\n• **समय**: बेहतर दक्षता के लिए विभाजित अनुप्रयोग\n• **जैविक**: कंपोस्ट, FYM मिट्टी के स्वास्थ्य में सुधार करते हैं\n• **सूक्ष्म पोषक तत्व**: जिंक, आयरन अक्सर कमी\n\nसर्वोत्तम परिणामों के लिए उर्वरक अनुप्रयोग से पहले हमेशा मिट्टी परीक्षण करें।",
+      "pest": "एकीकृत कीट प्रबंधन (IPM) दृष्टिकोण:\n\n• **रोकथाम**: फसल चक्र, प्रतिरोधी किस्में\n• **निगरानी**: नियमित खेत निरीक्षण\n• **जैविक**: लाभकारी कीड़े, जैव कीटनाशक\n• **रासायनिक**: अंतिम उपाय, लेबल निर्देशों का पालन करें\n• **सांस्कृतिक**: उचित दूरी, स्वच्छता\n\nप्रभावी कीट प्रबंधन के लिए जल्दी पहचान और रोकथाम महत्वपूर्ण है।",
+      "general": "मुझे आपके कृषि प्रश्न में मदद करने में खुशी होगी! यहां कुछ सामान्य सिद्धांत हैं:\n\n• **मिट्टी का स्वास्थ्य**: नियमित परीक्षण और जैविक पदार्थ जोड़ना\n• **पानी प्रबंधन**: कुशल सिंचाई और जल निकासी\n• **फसल चयन**: अपनी जलवायु के अनुकूल किस्में चुनें\n• **समय**: स्थानीय कृषि कैलेंडर का पालन करें\n• **एकीकृत दृष्टिकोण**: पारंपरिक और आधुनिक प्रथाओं को मिलाएं\n\nविशिष्ट मार्गदर्शन के लिए, कृपया अपने स्थानीय कृषि विस्तार अधिकारी से सलाह लें।"
+    },
+    "fallback_source": "सामान्य कृषि ज्ञान"
   },
   "chat": {
     "title": "कृषिमित्र से पूछें",
     "placeholder": "फसल, मौसम, कीट, मिट्टी के बारे में पूछें...",
     "send": "भेजें",
     "empty": "शुरू करने के लिए प्रश्न पूछें"
+  },
+  "disease_detection": {
+    "title": "पौधे की बीमारी की पहचान",
+    "description": "विश्लेषण के लिए प्रभावित पौधे की स्पष्ट तस्वीर अपलोड करें",
+    "upload_label": "रोग पहचान के लिए पौधे की तस्वीर अपलोड करें",
+    "click_upload": "पौधे की तस्वीर अपलोड करने के लिए क्लिक करें",
+    "drag_drop": "या खींचें और छोड़ें",
+    "file_support": "समर्थित: JPG, PNG, WEBP (अधिकतम 10MB)",
+    "preview": "पूर्वावलोकन",
+    "reset": "रीसेट",
+    "analyze": "तस्वीर का विश्लेषण करें",
+    "analyzing": "विश्लेषण हो रहा है...",
+    "tips_title": "📸 सर्वोत्तम परिणामों के लिए सुझाव:",
+    "tips": {
+      "lighting": "अच्छी रोशनी: प्राकृतिक दिन के उजाले में फोटो लें, फ्लैश से बचें",
+      "focus": "स्पष्ट फोकस: सुनिश्चित करें कि प्रभावित क्षेत्र तेज और फोकस में है",
+      "closeup": "क्लोज-अप शॉट्स: रोगग्रस्त पत्ती या पौधे के हिस्से से फ्रेम भरें",
+      "context": "संदर्भ शामिल करें: तुलना के लिए प्रभावित और स्वस्थ दोनों भागों को दिखाएं",
+      "shadows": "छाया से बचें: पौधे पर कोई छाया, चकाचौंध या प्रतिबिंब न हो",
+      "angles": "कई कोण: यदि लक्षण अलग हैं तो विभिन्न कोणों से फोटो लें"
+    },
+    "no_image": "कोई तस्वीर चयनित नहीं",
+    "no_image_desc": "कृपया विश्लेषण के लिए एक तस्वीर अपलोड करें",
+    "auth_required": "प्रमाणीकरण आवश्यक। कृपया लॉग इन करें।",
+    "analysis_complete": "विश्लेषण पूर्ण",
+    "analysis_failed": "विश्लेषण असफल",
+    "detected": "पहचाना गया:",
+    "analysis_failed_desc": "एक अप्रत्याशित त्रुटि हुई",
+    "no_results": "अभी तक कोई विश्लेषण परिणाम नहीं",
+    "no_results_desc": "पौधों की बीमारियों का पता लगाने के लिए एक तस्वीर अपलोड करें और \"विश्लेषण\" पर क्लिक करें",
+    "confidence": "विश्वास:",
+    "treatment": "उपचार",
+    "prevention": "रोकथाम",
+    "treatment_note": "सर्वोत्तम परिणामों के लिए तुरंत उपचार लागू करें। हमेशा उत्पाद निर्देशों का पालन करें और जब संभव हो तो जैविक विकल्पों पर विचार करें।",
+    "fallback_treatment": "विशिष्ट उपचार सिफारिशों के लिए कृषि विशेषज्ञों से सलाह लें",
+    "fallback_prevention_1": "अच्छी कृषि प्रथाओं का पालन करें",
+    "fallback_prevention_2": "नियमित निगरानी और निरीक्षण",
+    "fallback_description": "का पता चला। विशिष्ट उपचार सिफारिशों के लिए कृपया कृषि विशेषज्ञों से सलाह लें।"
+  },
+  "fertilizer_recommendation": {
+    "title": "फसल और मिट्टी की जानकारी",
+    "description": "अपनी फसल और मिट्टी की स्थितियों के बारे में विवरण दर्ज करें",
+    "crop_type": "फसल का प्रकार",
+    "soil_type": "मिट्टी का प्रकार",
+    "growth_stage": "विकास चरण",
+    "select_crop": "फसल चुनें",
+    "select_soil_type": "मिट्टी का प्रकार चुनें",
+    "select_growth_stage": "विकास चरण चुनें",
+    "temperature": "तापमान (°C)",
+    "humidity": "आर्द्रता (%)",
+    "soil_moisture": "मिट्टी की नमी (%)",
+    "nitrogen": "नाइट्रोजन (N)",
+    "phosphorous": "फास्फोरस (P)",
+    "potassium": "पोटेशियम (K)",
+    "soil_ph": "मिट्टी का pH",
+    "acidic": "अम्लीय (4.0)",
+    "neutral": "तटस्थ (7.0)",
+    "alkaline": "क्षारीय (9.0)",
+    "additional_notes": "अतिरिक्त टिप्पणियां (वैकल्पिक)",
+    "additional_notes_placeholder": "अपने खेत के बारे में कोई अन्य जानकारी...",
+    "reset": "रीसेट",
+    "generate_recommendations": "सिफारिशें उत्पन्न करें",
+    "generating": "उत्पन्न हो रहा है...",
+    "missing_info": "जानकारी गुम",
+    "missing_info_desc": "कृपया सभी आवश्यक फ़ील्ड भरें",
+    "recommendations_ready": "सिफारिशें तैयार",
+    "recommendations_ready_desc": "बैकएंड मॉडल से प्राप्त",
+    "error": "त्रुटि",
+    "prediction_failed": "भविष्यवाणी असफल",
+    "fertilizer_recommendations": "उर्वरक सिफारिशें",
+    "based_on": "{{soilType}} मिट्टी में {{growthStage}} चरण में बढ़ रहे {{cropType}} के आधार पर",
+    "soil_analysis": "मिट्टी विश्लेषण",
+    "fertilizer_plan": "उर्वरक योजना",
+    "soil_nutrient_status": "मिट्टी पोषक तत्व स्थिति",
+    "soil_nutrient_desc": "विश्लेषण पोषक तत्वों की कमी दिखाता है जिसे संतुलित उर्वरीकरण योजना के साथ संबोधित करने की आवश्यकता है।",
+    "soil_ph_status": "मिट्टी pH: {{ph}} - {{status}}",
+    "ph_acidic": "अम्लीय",
+    "ph_optimal": "इष्टतम",
+    "ph_alkaline": "क्षारीय",
+    "ph_acidic_advice": "बेहतर पोषक तत्व उपलब्धता के लिए pH बढ़ाने हेतु कृषि चूना लगाने पर विचार करें।",
+    "ph_alkaline_advice": "बेहतर पोषक तत्व उपलब्धता के लिए pH कम करने हेतु सल्फर या अम्लीकरण संशोधन लगाने पर विचार करें।",
+    "ph_optimal_advice": "वर्तमान pH अधिकांश फसलों के लिए इष्टतम है और अच्छी पोषक तत्व उपलब्धता की अनुमति देता है।",
+    "recommended_fertilizer": "अनुशंसित उर्वरक",
+    "composition": "संरचना",
+    "purpose": "उद्देश्य",
+    "best_for": "सर्वोत्तम के लिए",
+    "usage_tip": "उपयोग सुझाव",
+    "avoid": "बचें",
+    "application_details": "अनुप्रयोग विवरण",
+    "application_rate": "अनुप्रयोग दर",
+    "timing": "समय",
+    "method": "विधि",
+    "key_benefits": "मुख्य लाभ",
+    "no_recommendations": "अभी तक कोई सिफारिशें नहीं",
+    "no_recommendations_desc": "अपनी विशिष्ट स्थितियों के आधार पर व्यक्तिगत उर्वरक सिफारिशें प्राप्त करने के लिए फसल और मिट्टी की जानकारी फॉर्म भरें।",
+    "optimized_nutrition": "अनुकूलित पोषण",
+    "optimized_nutrition_desc": "आपकी फसल की जरूरतों के अनुरूप",
+    "economic_benefits": "आर्थिक लाभ",
+    "economic_benefits_desc": "अपशिष्ट और लागत कम करें",
+    "sustainable_practices": "टिकाऊ प्रथाएं",
+    "sustainable_practices_desc": "पर्यावरण के अनुकूल",
+    "higher_yields": "उच्च उत्पादन",
+    "higher_yields_desc": "फसल उत्पादन को अधिकतम करें",
+    "nutrient_status": {
+      "low": "कम",
+      "medium": "मध्यम",
+      "optimal": "इष्टतम",
+      "high": "उच्च"
+    },
+    "crops": {
+      "maize": "मक्का",
+      "sugarcane": "गन्ना",
+      "cotton": "कपास",
+      "tobacco": "तंबाकू",
+      "paddy": "धान",
+      "barley": "जौ",
+      "wheat": "गेहूं",
+      "millets": "बाजरा",
+      "oil_seeds": "तिलहन",
+      "pulses": "दालें",
+      "ground_nuts": "मूंगफली"
+    },
+    "soil_types": {
+      "sandy": "रेतीली",
+      "loamy": "दोमट",
+      "black": "काली",
+      "red": "लाल",
+      "clayey": "चिकनी"
+    },
+    "growth_stages": {
+      "seedling": "अंकुर",
+      "vegetative": "वानस्पतिक",
+      "flowering": "फूल",
+      "fruiting": "फल",
+      "maturity": "परिपक्वता"
+    }
+  },
+  "crop_recommendation": {
+    "title": "मिट्टी और जलवायु की जानकारी",
+    "description": "व्यक्तिगत फसल सिफारिश के लिए अपनी खेत की स्थितियां दर्ज करें",
+    "nitrogen": "नाइट्रोजन (N)",
+    "phosphorus": "फास्फोरस (P)",
+    "potassium": "पोटेशियम (K)",
+    "temperature": "तापमान (°C)",
+    "humidity": "आर्द्रता (%)",
+    "soil_ph": "मिट्टी का pH",
+    "rainfall": "वर्षा (mm)",
+    "reset": "रीसेट",
+    "get_recommendation": "सिफारिश प्राप्त करें",
+    "analyzing": "विश्लेषण हो रहा है...",
+    "missing_info": "जानकारी गुम",
+    "missing_info_desc": "कृपया सभी आवश्यक फ़ील्ड भरें",
+    "recommendation_ready": "सिफारिश तैयार",
+    "recommendation_ready_desc": "फसल सिफारिश सफलतापूर्वक उत्पन्न",
+    "error": "त्रुटि",
+    "failed_recommendation": "सिफारिश प्राप्त करने में विफल",
+    "crop_recommendation": "फसल सिफारिश",
+    "based_on_conditions": "आपकी मिट्टी और जलवायु की स्थितियों के आधार पर",
+    "recommendation_tab": "सिफारिश",
+    "details_tab": "बढ़ने का विवरण",
+    "recommended_crop": "अनुशंसित फसल",
+    "growing_seasons": "बढ़ने के मौसम",
+    "water_needs": "पानी की आवश्यकता",
+    "suitability": "उपयुक्तता",
+    "match": "मैच",
+    "agricultural_insights": "कृषि अंतर्दृष्टि",
+    "strategic_advantages": "रणनीतिक लाभ",
+    "soil_conditions_analysis": "मिट्टी की स्थिति विश्लेषण",
+    "climate_conditions": "जलवायु स्थितियां",
+    "farming_recommendations": "खेती की सिफारिशें",
+    "farming_tips": [
+      "मिट्टी की नमी के स्तर की नियमित निगरानी करें",
+      "अनुशंसित उर्वरक अनुप्रयोग अनुसूची का पालन करें",
+      "एकीकृत कीट प्रबंधन प्रथाओं को लागू करें",
+      "मिट्टी के स्वास्थ्य के लिए फसल चक्र पर विचार करें",
+      "स्थानीय कृषि विस्तार सेवाओं से सलाह लें"
+    ],
+    "no_recommendation": "अभी तक कोई सिफारिश नहीं",
+    "no_recommendation_desc": "मशीन लर्निंग विश्लेषण के आधार पर व्यक्तिगत फसल सिफारिश प्राप्त करने के लिए अपनी मिट्टी और जलवायु की स्थितियां दर्ज करें।",
+    "ai_analysis": "AI-संचालित विश्लेषण",
+    "ai_analysis_desc": "मशीन लर्निंग सिफारिशें",
+    "personalized_results": "व्यक्तिगत परिणाम",
+    "personalized_results_desc": "आपकी स्थितियों के आधार पर",
+    "detailed_insights": "विस्तृत अंतर्दृष्टि",
+    "detailed_insights_desc": "बढ़ने की युक्तियां और लाभ",
+    "expert_knowledge": "विशेषज्ञ ज्ञान",
+    "expert_knowledge_desc": "कृषि सर्वोत्तम प्रथाएं",
+    "suitability_levels": {
+      "excellent": "उत्कृष्ट",
+      "good": "अच्छा",
+      "average": "औसत",
+      "poor": "खराब"
+    },
+    "water_requirements": {
+      "low": "कम",
+      "medium": "मध्यम",
+      "high": "उच्च"
+    },
+    "fallback": {
+      "growing_season": "स्थानीय कृषि विशेषज्ञ से सलाह लें",
+      "special_notes": "डेटाबेस में फसल की जानकारी उपलब्ध नहीं",
+      "benefits": ["ML मॉडल सिफारिश", "आपकी मिट्टी की स्थितियों के लिए उपयुक्त"]
+    }
   },
   "lang": {
     "label": "भाषा",
