--- a/frontend/src/locales/mr/common.json
+++ b/frontend/src/locales/mr/common.json
@@ -11,18 +11,278 @@
   },
   "header_title": "कृषिमित्र डॅशबोर्ड",
   "header_subtitle": "{{location}} साठी स्मार्ट कृषी जोखीम मूल्यांकन आणि सल्ला",
+  "greeting": "नमस्कार, {{name}}!",
+  "welcome_message": "आज स्मार्ट शेतीसाठी एक उत्तम दिवस बनवूया",
   "tabs": {
     "risk": "जोखीम मूल्यांकन",
     "disease": "रोग ओळख",
     "fertilizer": "खते सल्लागार",
-    "advisory": "स्थानिक सल्ला",
+    "advisory": "पीक शिफारस",
     "chat": "चॅटबॉट"
+  },
+  "risk_dashboard": {
+    "current_weather": "सध्याची हवामान परिस्थिती",
+    "weather_description": "{{location}} साठी रिअल-टाइम हवामान डेटा",
+    "temperature": "तापमान",
+    "humidity": "आर्द्रता",
+    "wind_speed": "वाऱ्याचा वेग",
+    "rainfall": "पाऊस",
+    "risk_distribution": "जोखीम वितरण विहंगावलोकन",
+    "risk_distribution_description": "आपल्या सर्व पिकांमधील सध्याचे जोखीम स्तर",
+    "crop_risk_assessment": "पीक जोखीम मूल्यांकन",
+    "crop_risk_description": "आपल्या क्षेत्रातील पिकांसाठी सध्याचे जोखीम स्तर",
+    "risk_level": "जोखीम स्तर",
+    "low_risk": "कमी जोखीम",
+    "medium_risk": "मध्यम जोखीम",
+    "high_risk": "उच्च जोखीम",
+    "loading": "हवामान डेटा लोड होत आहे...",
+    "error": "हवामान डेटा लोड करण्यात अयशस्वी",
+    "no_data": "हवामान डेटा उपलब्ध नाही",
+    "chart_risk_level": "जोखीम स्तर (%)",
+    "chart_crop": "पीक:",
+    "chart_risk_level_short": "जोखीम स्तर",
+    "potential_threats": "संभाव्य धोके:",
+    "specific_recommendations": "विशिष्ट शिफारसी",
+    "threats": {
+      "frost_damage": "दंव नुकसान जोखीम",
+      "cold_stress": "थंडीचा ताण",
+      "heat_stress": "उष्णतेचा ताण",
+      "temperature_stress": "तापमान ताण",
+      "pest_disease": "किड आणि रोग जोखीम",
+      "fungal_disease": "बुरशी रोग जोखीम",
+      "drought_stress": "दुष्काळाचा ताण",
+      "weather_stress": "हवामान संबंधी ताण"
+    },
+    "probability": {
+      "high": "उच्च",
+      "medium": "मध्यम",
+      "low": "कमी"
+    },
+    "optimal": "इष्टतम:",
+    "categories": {
+      "irrigation": "सिंचन",
+      "pest_alert": "किड इशारा",
+      "harvest_tips": "कापणी टिप्स",
+      "fertilizer_tips": "खते टिप्स",
+      "crop_health": "पीक आरोग्य"
+    }
+  },
+  "chatbot": {
+    "assistant_name": "कृषी सहाय्यक",
+    "assistant_description": "आपला शेती साथी",
+    "placeholder": "शेतीबद्दल विचारा... 🌱",
+    "tooltip": "शेतीबद्दल मला काहीही विचारा! 🌱",
+    "thinking": "विचार करत आहे...",
+    "send": "पाठवा"
   },
   "chat": {
     "title": "कृषिमित्रला विचारा",
     "placeholder": "पिके, हवामान, किड, माती बद्दल विचारा...",
     "send": "पाठवा",
     "empty": "सुरुवात करण्यासाठी प्रश्न विचारा"
+  },
+  "disease_detection": {
+    "title": "वनस्पती रोग ओळख",
+    "description": "विश्लेषणासाठी प्रभावित वनस्पतीची स्पष्ट प्रतिमा अपलोड करा",
+    "upload_label": "रोग ओळखीसाठी वनस्पतीची प्रतिमा अपलोड करा",
+    "click_upload": "वनस्पतीची प्रतिमा अपलोड करण्यासाठी क्लिक करा",
+    "drag_drop": "किंवा ड्रॅग आणि ड्रॉप करा",
+    "file_support": "समर्थित: JPG, PNG, WEBP (कमाल 10MB)",
+    "preview": "पूर्वावलोकन",
+    "reset": "रीसेट",
+    "analyze": "प्रतिमेचे विश्लेषण करा",
+    "analyzing": "विश्लेषण होत आहे...",
+    "tips_title": "📸 सर्वोत्तम परिणामांसाठी टिप्स:",
+    "tips": {
+      "lighting": "चांगला प्रकाश: नैसर्गिक दिवसाच्या प्रकाशात फोटो घ्या, फ्लॅश टाळा",
+      "focus": "स्पष्ट फोकस: प्रभावित क्षेत्र तीक्ष्ण आणि फोकसमध्ये असल्याची खात्री करा",
+      "closeup": "क्लोज-अप शॉट्स: रोगग्रस्त पान किंवा वनस्पतीच्या भागाने फ्रेम भरा",
+      "context": "संदर्भ समाविष्ट करा: तुलनेसाठी प्रभावित आणि निरोगी दोन्ही भाग दाखवा",
+      "shadows": "सावल्या टाळा: वनस्पतीवर सावली, चकाकी किंवा प्रतिबिंब नसावे",
+      "angles": "अनेक कोन: जर लक्षणे वेगळी असतील तर वेगवेगळ्या कोनातून फोटो घ्या"
+    },
+    "no_image": "कोणतीही प्रतिमा निवडली नाही",
+    "no_image_desc": "कृपया विश्लेषणासाठी प्रतिमा अपलोड करा",
+    "auth_required": "प्रमाणीकरण आवश्यक. कृपया लॉग इन करा.",
+    "analysis_complete": "विश्लेषण पूर्ण",
+    "analysis_failed": "विश्लेषण अयशस्वी",
+    "detected": "ओळखले:",
+    "analysis_failed_desc": "एक अनपेक्षित त्रुटी आली",
+    "no_results": "अद्याप कोणते विश्लेषण परिणाम नाहीत",
+    "no_results_desc": "वनस्पती रोग शोधण्यासाठी प्रतिमा अपलोड करा आणि \"विश्लेषण\" वर क्लिक करा",
+    "confidence": "आत्मविश्वास:",
+    "treatment": "उपचार",
+    "prevention": "प्रतिबंध",
+    "treatment_note": "सर्वोत्तम परिणामांसाठी त्वरित उपचार लागू करा. नेहमी उत्पादन सूचनांचे पालन करा आणि शक्य असेल तेव्हा सेंद्रिय पर्यायांचा विचार करा.",
+    "fallback_treatment": "विशिष्ट उपचार शिफारशींसाठी कृषी तज्ञांचा सल्ला घ्या",
+    "fallback_prevention_1": "चांगल्या कृषी पद्धतींचे पालन करा",
+    "fallback_prevention_2": "नियमित निरीक्षण आणि तपासणी",
+    "fallback_description": "आढळले. विशिष्ट उपचार शिफारशींसाठी कृपया कृषी तज्ञांचा सल्ला घ्या."
+  },
+  "fertilizer_recommendation": {
+    "title": "पीक आणि माती माहिती",
+    "description": "आपल्या पिकाची आणि मातीच्या परिस्थितींचे तपशील प्रविष्ट करा",
+    "crop_type": "पीक प्रकार",
+    "soil_type": "माती प्रकार",
+    "growth_stage": "वाढीचा टप्पा",
+    "select_crop": "पीक निवडा",
+    "select_soil_type": "माती प्रकार निवडा",
+    "select_growth_stage": "वाढीचा टप्पा निवडा",
+    "temperature": "तापमान (°C)",
+    "humidity": "आर्द्रता (%)",
+    "soil_moisture": "मातीची ओलावा (%)",
+    "nitrogen": "नायट्रोजन (N)",
+    "phosphorous": "फॉस्फरस (P)",
+    "potassium": "पोटॅशियम (K)",
+    "soil_ph": "मातीचा pH",
+    "acidic": "आम्लीय (4.0)",
+    "neutral": "तटस्थ (7.0)",
+    "alkaline": "क्षारीय (9.0)",
+    "additional_notes": "अतिरिक्त टिप्पण्या (पर्यायी)",
+    "additional_notes_placeholder": "आपल्या शेताबद्दल इतर कोणतीही माहिती...",
+    "reset": "रीसेट",
+    "generate_recommendations": "शिफारसी तयार करा",
+    "generating": "तयार करत आहे...",
+    "missing_info": "माहिती गहाळ",
+    "missing_info_desc": "कृपया सर्व आवश्यक फील्ड भरा",
+    "recommendations_ready": "शिफारसी तयार",
+    "recommendations_ready_desc": "बॅकएंड मॉडेलमधून मिळवले",
+    "error": "त्रुटी",
+    "prediction_failed": "अंदाज अयशस्वी",
+    "fertilizer_recommendations": "खते शिफारसी",
+    "based_on": "{{soilType}} मातीत {{growthStage}} टप्प्यात वाढणाऱ्या {{cropType}} च्या आधारावर",
+    "soil_analysis": "माती विश्लेषण",
+    "fertilizer_plan": "खते योजना",
+    "soil_nutrient_status": "मातीच्या पोषक तत्वांची स्थिती",
+    "soil_nutrient_desc": "विश्लेषण पोषक तत्वांची कमतरता दर्शवते ज्यांना संतुलित खतीकरण योजनेने संबोधित करणे आवश्यक आहे.",
+    "soil_ph_status": "माती pH: {{ph}} - {{status}}",
+    "ph_acidic": "आम्लीय",
+    "ph_optimal": "इष्टतम",
+    "ph_alkaline": "क्षारीय",
+    "ph_acidic_advice": "चांगल्या पोषक तत्व उपलब्धतेसाठी pH वाढवण्यासाठी कृषी चुना लावण्याचा विचार करा.",
+    "ph_alkaline_advice": "चांगल्या पोषक तत्व उपलब्धतेसाठी pH कमी करण्यासाठी सल्फर किंवा आम्लीकरण सुधारणा लावण्याचा विचार करा.",
+    "ph_optimal_advice": "सध्याचा pH बहुतेक पिकांसाठी इष्टतम आहे आणि चांगली पोषक तत्व उपलब्धता करून देतो.",
+    "recommended_fertilizer": "शिफारस केलेले खत",
+    "composition": "रचना",
+    "purpose": "उद्देश",
+    "best_for": "सर्वोत्तम यासाठी",
+    "usage_tip": "वापर सूचना",
+    "avoid": "टाळा",
+    "application_details": "वापर तपशील",
+    "application_rate": "वापर दर",
+    "timing": "वेळ",
+    "method": "पद्धत",
+    "key_benefits": "मुख्य फायदे",
+    "no_recommendations": "अद्याप कोणत्या शिफारसी नाहीत",
+    "no_recommendations_desc": "आपल्या विशिष्ट परिस्थितींच्या आधारावर वैयक्तिक खते शिफारसी मिळवण्यासाठी पीक आणि माती माहिती फॉर्म भरा.",
+    "optimized_nutrition": "अनुकूलित पोषण",
+    "optimized_nutrition_desc": "आपल्या पिकाच्या गरजांनुसार",
+    "economic_benefits": "आर्थिक फायदे",
+    "economic_benefits_desc": "कचरा आणि खर्च कमी करा",
+    "sustainable_practices": "टिकाऊ पद्धती",
+    "sustainable_practices_desc": "पर्यावरणास अनुकूल",
+    "higher_yields": "जास्त उत्पादन",
+    "higher_yields_desc": "पीक उत्पादन वाढवा",
+    "nutrient_status": {
+      "low": "कमी",
+      "medium": "मध्यम",
+      "optimal": "इष्टतम",
+      "high": "जास्त"
+    },
+    "crops": {
+      "maize": "मका",
+      "sugarcane": "ऊस",
+      "cotton": "कापूस",
+      "tobacco": "तंबाखू",
+      "paddy": "भात",
+      "barley": "जव",
+      "wheat": "गहू",
+      "millets": "बाजरी",
+      "oil_seeds": "तेलबिया",
+      "pulses": "डाळी",
+      "ground_nuts": "भुईमूग"
+    },
+    "soil_types": {
+      "sandy": "वालुकामय",
+      "loamy": "चिकणमाती",
+      "black": "काळी",
+      "red": "लाल",
+      "clayey": "चिकणमाती"
+    },
+    "growth_stages": {
+      "seedling": "रोप",
+      "vegetative": "वनस्पति",
+      "flowering": "फुलणे",
+      "fruiting": "फळणे",
+      "maturity": "परिपक्वता"
+    }
+  },
+  "crop_recommendation": {
+    "title": "माती आणि हवामान माहिती",
+    "description": "वैयक्तिक पीक शिफारशीसाठी आपल्या शेताची परिस्थिती प्रविष्ट करा",
+    "nitrogen": "नायट्रोजन (N)",
+    "phosphorus": "फॉस्फरस (P)",
+    "potassium": "पोटॅशियम (K)",
+    "temperature": "तापमान (°C)",
+    "humidity": "आर्द्रता (%)",
+    "soil_ph": "मातीचा pH",
+    "rainfall": "पाऊस (mm)",
+    "reset": "रीसेट",
+    "get_recommendation": "शिफारस मिळवा",
+    "analyzing": "विश्लेषण करत आहे...",
+    "missing_info": "माहिती गहाळ",
+    "missing_info_desc": "कृपया सर्व आवश्यक फील्ड भरा",
+    "recommendation_ready": "शिफारस तयार",
+    "recommendation_ready_desc": "पीक शिफारस यशस्वीरित्या तयार केली",
+    "error": "त्रुटी",
+    "failed_recommendation": "शिफारस मिळवण्यात अयशस्वी",
+    "crop_recommendation": "पीक शिफारस",
+    "based_on_conditions": "आपल्या माती आणि हवामान परिस्थितींच्या आधारावर",
+    "recommendation_tab": "शिफारस",
+    "details_tab": "वाढीचे तपशील",
+    "recommended_crop": "शिफारस केलेले पीक",
+    "growing_seasons": "वाढीचे हंगाम",
+    "water_needs": "पाण्याची गरज",
+    "suitability": "योग्यता",
+    "match": "जुळणी",
+    "agricultural_insights": "कृषी अंतर्दृष्टी",
+    "strategic_advantages": "धोरणात्मक फायदे",
+    "soil_conditions_analysis": "मातीच्या परिस्थितींचे विश्लेषण",
+    "climate_conditions": "हवामान परिस्थिती",
+    "farming_recommendations": "शेतीच्या शिफारसी",
+    "farming_tips": [
+      "मातीच्या ओलावा पातळीचे नियमित निरीक्षण करा",
+      "शिफारस केलेल्या खत वापराच्या वेळापत्रकाचे पालन करा",
+      "एकात्मिक किड व्यवस्थापन पद्धती लागू करा",
+      "मातीच्या आरोग्यासाठी पीक फेरफारचा विचार करा",
+      "स्थानिक कृषी विस्तार सेवांचा सल्ला घ्या"
+    ],
+    "no_recommendation": "अद्याप कोणत्या शिफारसी नाहीत",
+    "no_recommendation_desc": "मशीन लर्निंग विश्लेषणावर आधारित वैयक्तिक पीक शिफारस मिळवण्यासाठी आपल्या माती आणि हवामान परिस्थिती प्रविष्ट करा.",
+    "ai_analysis": "AI-चालित विश्लेषण",
+    "ai_analysis_desc": "मशीन लर्निंग शिफारसी",
+    "personalized_results": "वैयक्तिक परिणाम",
+    "personalized_results_desc": "आपल्या परिस्थितींवर आधारित",
+    "detailed_insights": "तपशीलवार अंतर्दृष्टी",
+    "detailed_insights_desc": "वाढीच्या टिप्स आणि फायदे",
+    "expert_knowledge": "तज्ञ ज्ञान",
+    "expert_knowledge_desc": "कृषी सर्वोत्तम पद्धती",
+    "suitability_levels": {
+      "excellent": "उत्कृष्ट",
+      "good": "चांगले",
+      "average": "सरासरी",
+      "poor": "खराब"
+    },
+    "water_requirements": {
+      "low": "कमी",
+      "medium": "मध्यम",
+      "high": "जास्त"
+    },
+    "fallback": {
+      "growing_season": "स्थानिक कृषी तज्ञांचा सल्ला घ्या",
+      "special_notes": "डेटाबेसमध्ये पीक माहिती उपलब्ध नाही",
+      "benefits": ["ML मॉडेल शिफारस", "आपल्या मातीच्या परिस्थितीसाठी योग्य"]
+    }
   },
   "lang": {
     "label": "भाषा",
