--- a/frontend/src/locales/ta/common.json
+++ b/frontend/src/locales/ta/common.json
@@ -11,18 +11,278 @@
   },
   "header_title": "கிருஷிமித்ரா டாஷ்போர்டு",
   "header_subtitle": "{{location}} க்கான ஸ்மார்ட் விவசாய இடர் மதிப்பீடு மற்றும் ஆலோசனை",
+  "greeting": "வணக்கம், {{name}}!",
+  "welcome_message": "இன்றை ஸ்மார்ட் விவசாயத்திற்கு ஒரு சிறந்த நாளாக ஆக்குவோம்",
   "tabs": {
     "risk": "இடர் மதிப்பீடு",
     "disease": "நோய் கண்டறிதல்",
     "fertilizer": "உர ஆலோசகர்",
-    "advisory": "உள்ளூர் ஆலோசனை",
+    "advisory": "பயிர் பரிந்துரை",
     "chat": "அரட்டை"
+  },
+  "risk_dashboard": {
+    "current_weather": "தற்போதைய வானிலை நிலைமைகள்",
+    "weather_description": "{{location}} க்கான ரியல்-டைம் வானிலை தகவல்",
+    "temperature": "வெப்பநிலை",
+    "humidity": "ஈரப்பதம்",
+    "wind_speed": "காற்றின் வேகம்",
+    "rainfall": "மழை",
+    "risk_distribution": "இடர் விதரணை காட்சி",
+    "risk_distribution_description": "உங்கள் அனைத்து பயிர்களிலும் தற்போதைய இடர் நிலைகள்",
+    "crop_risk_assessment": "பயிர் இடர் மதிப்பீடு",
+    "crop_risk_description": "உங்கள் பகுதியில் பயிர்களுக்கான தற்போதைய இடர் நிலைகள்",
+    "risk_level": "இடர் நிலை",
+    "low_risk": "குறைவான இடர்",
+    "medium_risk": "மத்திய இடர்",
+    "high_risk": "அதிக இடர்",
+    "loading": "வானிலை தகவல் ஏற்றப்படுகிறது...",
+    "error": "வானிலை தகவல் ஏற்றுவதில் தோல்வி",
+    "no_data": "வானிலை தகவல் கிடைக்கவில்லை",
+    "chart_risk_level": "இடர் நிலை (%)",
+    "chart_crop": "பயிர்:",
+    "chart_risk_level_short": "இடர் நிலை",
+    "potential_threats": "சாத்தியமான அச்சுறுத்தல்கள்:",
+    "specific_recommendations": "குறிப்பிட்ட பரிந்துரைகள்",
+    "threats": {
+      "frost_damage": "பனி சேத இடர்",
+      "cold_stress": "குளிர் அழுத்தம்",
+      "heat_stress": "வெப்ப அழுத்தம்",
+      "temperature_stress": "வெப்பநிலை அழுத்தம்",
+      "pest_disease": "பூச்சி மற்றும் நோய் இடர்",
+      "fungal_disease": "பூஞ்சை நோய் இடர்",
+      "drought_stress": "வறட்சி அழுத்தம்",
+      "weather_stress": "வானிலை தொடர்பான அழுத்தம்"
+    },
+    "probability": {
+      "high": "அதிக",
+      "medium": "மத்திய",
+      "low": "குறைவான"
+    },
+    "optimal": "சிறந்த:",
+    "categories": {
+      "irrigation": "நீர்ப்பாசனம்",
+      "pest_alert": "பூச்சி எச்சரிக்கை",
+      "harvest_tips": "அறுவடை குறிப்புகள்",
+      "fertilizer_tips": "உர குறிப்புகள்",
+      "crop_health": "பயிர் ஆரோக்கியம்"
+    }
+  },
+  "chatbot": {
+    "assistant_name": "கிரிஷி உதவியாளர்",
+    "assistant_description": "உங்கள் விவசாய துணை",
+    "placeholder": "விவசாயத்தை பற்றி கேளுங்கள்... 🌱",
+    "tooltip": "விவசாயத்தை பற்றி என்னிடம் ஏதாவது கேளுங்கள்! 🌱",
+    "thinking": "யோசிக்கிறேன்...",
+    "send": "அனுப்பு"
   },
   "chat": {
     "title": "கிருஷிமித்ராவிடம் கேளுங்கள்",
     "placeholder": "பயிர்கள், வானிலை, பூச்சிகள், மண் பற்றி கேளுங்கள்...",
     "send": "அனுப்பு",
     "empty": "தொடங்க ஒரு கேள்வி கேளுங்கள்"
+  },
+  "disease_detection": {
+    "title": "தாவர நோய் கண்டறிதல்",
+    "description": "பகுப்பாய்வுக்காக பாதிக்கப்பட்ட தாவரத்தின் தெளிவான படத்தை பதிவேற்றவும்",
+    "upload_label": "நோய் கண்டறிதலுக்காக தாவர படத்தை பதிவேற்றவும்",
+    "click_upload": "தாவர படத்தை பதிவேற்ற கிளிக் செய்யவும்",
+    "drag_drop": "அல்லது இழுத்து விடவும்",
+    "file_support": "ஆதரவு: JPG, PNG, WEBP (அதிகபட்சம் 10MB)",
+    "preview": "முன்னோட்டம்",
+    "reset": "மீட்டமை",
+    "analyze": "படத்தை பகுப்பாய்வு செய்",
+    "analyzing": "பகுப்பாய்வு செய்கிறது...",
+    "tips_title": "📸 சிறந்த முடிவுகளுக்கான குறிப்புகள்:",
+    "tips": {
+      "lighting": "நல்ல வெளிச்சம்: இயற்கை பகல் வெளிச்சத்தில் புகைப்படம் எடுங்கள், ஃபிளாஷ் தவிர்க்கவும்",
+      "focus": "தெளிவான கவனம்: பாதிக்கப்பட்ட பகுதி கூர்மையாகவும் கவனத்தில் இருப்பதையும் உறுதிப்படுத்தவும்",
+      "closeup": "நெருக்கமான காட்சிகள்: நோயுற்ற இலை அல்லது தாவர பகுதியால் சட்டத்தை நிரப்பவும்",
+      "context": "சூழலை சேர்க்கவும்: ஒப்பீட்டிற்காக பாதிக்கப்பட்ட மற்றும் ஆரோக்கியமான இரு பகுதிகளையும் காட்டவும்",
+      "shadows": "நிழல்களை தவிர்க்கவும்: தாவரத்தில் நிழல்கள், பளபளப்பு அல்லது பிரதிபலிப்புகள் இல்லாமல்",
+      "angles": "பல கோணங்கள்: அறிகுறிகள் வேறுபட்டால் வெவ்வேறு கோணங்களில் இருந்து புகைப்படம் எடுக்கவும்"
+    },
+    "no_image": "எந்த படமும் தேர்ந்தெடுக்கப்படவில்லை",
+    "no_image_desc": "பகுப்பாய்வுக்காக ஒரு படத்தை பதிவேற்றவும்",
+    "auth_required": "அங்கீகாரம் தேவை. தயவுசெய்து உள்நுழையவும்.",
+    "analysis_complete": "பகுப்பாய்வு முடிந்தது",
+    "analysis_failed": "பகுப்பாய்வு தோல்வியடைந்தது",
+    "detected": "கண்டறியப்பட்டது:",
+    "analysis_failed_desc": "எதிர்பாராத பிழை ஏற்பட்டது",
+    "no_results": "இன்னும் பகுப்பாய்வு முடிவுகள் இல்லை",
+    "no_results_desc": "தாவர நோய்களை கண்டறிய ஒரு படத்தை பதிவேற்றி \"பகுப்பாய்வு\" என்பதில் கிளிக் செய்யவும்",
+    "confidence": "நம்பிக்கை:",
+    "treatment": "சிகிச்சை",
+    "prevention": "தடுப்பு",
+    "treatment_note": "சிறந்த முடிவுகளுக்காக உடனடியாக சிகிச்சைகளை பயன்படுத்தவும். எப்போதும் தயாரிப்பு வழிமுறைகளை பின்பற்றவும் மற்றும் சாத்தியமானபோது இயற்கை மாற்றுகளை கருத்தில் கொள்ளவும்.",
+    "fallback_treatment": "குறிப்பிட்ட சிகிச்சை பரிந்துரைகளுக்கு வேளாண் நிபுணர்களை அணுகவும்",
+    "fallback_prevention_1": "நல்ல வேளாண் நடைமுறைகளை பின்பற்றவும்",
+    "fallback_prevention_2": "வழக்கமான கண்காணிப்பு மற்றும் ஆய்வு",
+    "fallback_description": "கண்டறியப்பட்டது. குறிப்பிட்ட சிகிச்சை பரிந்துரைகளுக்கு தயவுசெய்து வேளாண் நிபுணர்களை அணுகவும்."
+  },
+  "fertilizer_recommendation": {
+    "title": "பயிர் மற்றும் மண் தகவல்",
+    "description": "உங்கள் பயிர் மற்றும் மண் நிலைமைகள் பற்றிய விவரங்களை உள்ளிடவும்",
+    "crop_type": "பயிர் வகை",
+    "soil_type": "மண் வகை",
+    "growth_stage": "வளர்ச்சி நிலை",
+    "select_crop": "பயிரை தேர்ந்தெடுக்கவும்",
+    "select_soil_type": "மண் வகையை தேர்ந்தெடுக்கவும்",
+    "select_growth_stage": "வளர்ச்சி நிலையை தேர்ந்தெடுக்கவும்",
+    "temperature": "வெப்பநிலை (°C)",
+    "humidity": "ஈரப்பதம் (%)",
+    "soil_moisture": "மண் ஈரப்பதம் (%)",
+    "nitrogen": "நைட்ரஜன் (N)",
+    "phosphorous": "பாஸ்பரஸ் (P)",
+    "potassium": "பொட்டாசியம் (K)",
+    "soil_ph": "மண் pH",
+    "acidic": "அமில (4.0)",
+    "neutral": "நடுநிலை (7.0)",
+    "alkaline": "கார (9.0)",
+    "additional_notes": "கூடுதல் குறிப்புகள் (விருப்பம்)",
+    "additional_notes_placeholder": "உங்கள் வயலைப் பற்றிய வேறு ஏதேனும் தகவல்...",
+    "reset": "மீட்டமை",
+    "generate_recommendations": "பரிந்துரைகளை உருவாக்கவும்",
+    "generating": "உருவாக்குகிறது...",
+    "missing_info": "தகவல் இல்லை",
+    "missing_info_desc": "தயவுசெய்து அனைத்து தேவையான புலங்களையும் நிரப்பவும்",
+    "recommendations_ready": "பரிந்துரைகள் தயார்",
+    "recommendations_ready_desc": "பின்தள மாதிரியிலிருந்து பெறப்பட்டது",
+    "error": "பிழை",
+    "prediction_failed": "முன்னறிவிப்பு தோல்வி",
+    "fertilizer_recommendations": "உர பரிந்துரைகள்",
+    "based_on": "{{soilType}} மண்ணில் {{growthStage}} நிலையில் வளரும் {{cropType}} அடிப்படையில்",
+    "soil_analysis": "மண் பகுப்பாய்வு",
+    "fertilizer_plan": "உர திட்டம்",
+    "soil_nutrient_status": "மண் ஊட்டச்சத்து நிலை",
+    "soil_nutrient_desc": "பகுப்பாய்வு ஊட்டச்சத்து குறைபாடுகளைக் காட்டுகிறது, அவை சமநிலையான உர திட்டத்தால் தீர்க்கப்பட வேண்டும்.",
+    "soil_ph_status": "மண் pH: {{ph}} - {{status}}",
+    "ph_acidic": "அமில",
+    "ph_optimal": "சிறந்த",
+    "ph_alkaline": "கார",
+    "ph_acidic_advice": "சிறந்த ஊட்டச்சத்து கிடைக்க pH அதிகரிக்க வேளாண் சுண்ணாம்பு பயன்படுத்துவதை பரிசீலிக்கவும்.",
+    "ph_alkaline_advice": "சிறந்த ஊட்டச்சத்து கிடைக்க pH குறைக்க கந்தகம் அல்லது அமிலமாக்கும் திருத்தங்களை பயன்படுத்துவதை பரிசீலிக்கவும்.",
+    "ph_optimal_advice": "தற்போதைய pH பெரும்பாலான பயிர்களுக்கு சிறந்தது மற்றும் நல்ல ஊட்டச்சத்து கிடைக்க அனுமதிக்கிறது.",
+    "recommended_fertilizer": "பரிந்துரைக்கப்பட்ட உரம்",
+    "composition": "கலவை",
+    "purpose": "நோக்கம்",
+    "best_for": "சிறந்தது",
+    "usage_tip": "பயன்பாட்டு குறிப்பு",
+    "avoid": "தவிர்க்கவும்",
+    "application_details": "பயன்பாட்டு விவரங்கள்",
+    "application_rate": "பயன்பாட்டு விகிதம்",
+    "timing": "நேரம்",
+    "method": "முறை",
+    "key_benefits": "முக்கிய நன்மைகள்",
+    "no_recommendations": "இன்னும் பரிந்துரைகள் இல்லை",
+    "no_recommendations_desc": "உங்கள் குறிப்பிட்ட நிலைமைகளின் அடிப்படையில் தனிப்பட்ட உர பரிந்துரைகளைப் பெற பயிர் மற்றும் மண் தகவல் படிவத்தை நிரப்பவும்.",
+    "optimized_nutrition": "மேம்படுத்தப்பட்ட ஊட்டச்சத்து",
+    "optimized_nutrition_desc": "உங்கள் பயிர் தேவைகளுக்கு ஏற்ப",
+    "economic_benefits": "பொருளாதார நன்மைகள்",
+    "economic_benefits_desc": "கழிவு மற்றும் செலவுகளை குறைக்கவும்",
+    "sustainable_practices": "நிலையான நடைமுறைகள்",
+    "sustainable_practices_desc": "சுற்றுச்சூழல் நட்பு",
+    "higher_yields": "அதிக விளைச்சல்",
+    "higher_yields_desc": "பயிர் உற்பத்தியை அதிகரிக்கவும்",
+    "nutrient_status": {
+      "low": "குறைவான",
+      "medium": "மத்திய",
+      "optimal": "சிறந்த",
+      "high": "அதிக"
+    },
+    "crops": {
+      "maize": "சோளம்",
+      "sugarcane": "கரும்பு",
+      "cotton": "பருத்தி",
+      "tobacco": "புகையிலை",
+      "paddy": "நெல்",
+      "barley": "பார்லி",
+      "wheat": "கோதுமை",
+      "millets": "சிறுதானியங்கள்",
+      "oil_seeds": "எண்ணெய் விதைகள்",
+      "pulses": "பருப்பு வகைகள்",
+      "ground_nuts": "நிலக்கடலை"
+    },
+    "soil_types": {
+      "sandy": "மணல்",
+      "loamy": "களிமண்",
+      "black": "கருப்பு",
+      "red": "சிவப்பு",
+      "clayey": "களிமண்"
+    },
+    "growth_stages": {
+      "seedling": "நாற்று",
+      "vegetative": "தாவர",
+      "flowering": "பூக்கும்",
+      "fruiting": "காய்க்கும்",
+      "maturity": "முதிர்ச்சி"
+    }
+  },
+  "crop_recommendation": {
+    "title": "மண் மற்றும் காலநிலை தகவல்",
+    "description": "தனிப்பட்ட பயிர் பரிந்துரைக்காக உங்கள் வயல் நிலைமைகளை உள்ளிடவும்",
+    "nitrogen": "நைட்ரஜன் (N)",
+    "phosphorus": "பாஸ்பரஸ் (P)",
+    "potassium": "பொட்டாசியம் (K)",
+    "temperature": "வெப்பநிலை (°C)",
+    "humidity": "ஈரப்பதம் (%)",
+    "soil_ph": "மண் pH",
+    "rainfall": "மழைப்பொழிவு (mm)",
+    "reset": "மீட்டமை",
+    "get_recommendation": "பரிந்துரை பெறவும்",
+    "analyzing": "பகுப்பாய்வு செய்கிறது...",
+    "missing_info": "தகவல் இல்லை",
+    "missing_info_desc": "தயவுசெய்து அனைத்து தேவையான புலங்களையும் நிரப்பவும்",
+    "recommendation_ready": "பரிந்துரை தயார்",
+    "recommendation_ready_desc": "பயிர் பரிந்துரை வெற்றிகரமாக உருவாக்கப்பட்டது",
+    "error": "பிழை",
+    "failed_recommendation": "பரிந்துரை பெறுவதில் தோல்வி",
+    "crop_recommendation": "பயிர் பரிந்துரை",
+    "based_on_conditions": "உங்கள் மண் மற்றும் காலநிலை நிலைமைகளின் அடிப்படையில்",
+    "recommendation_tab": "பரிந்துரை",
+    "details_tab": "வளர்ச்சி விவரங்கள்",
+    "recommended_crop": "பரிந்துரைக்கப்பட்ட பயிர்",
+    "growing_seasons": "வளரும் பருவங்கள்",
+    "water_needs": "நீர் தேவைகள்",
+    "suitability": "பொருத்தம்",
+    "match": "பொருத்தம்",
+    "agricultural_insights": "வேளாண் நுண்ணறிவு",
+    "strategic_advantages": "மூலோபாய நன்மைகள்",
+    "soil_conditions_analysis": "மண் நிலைமைகள் பகுப்பாய்வு",
+    "climate_conditions": "காலநிலை நிலைமைகள்",
+    "farming_recommendations": "வேளாண் பரிந்துரைகள்",
+    "farming_tips": [
+      "மண் ஈரப்பத அளவுகளை தொடர்ந்து கண்காணிக்கவும்",
+      "பரிந்துரைக்கப்பட்ட உர பயன்பாட்டு அட்டவணையை பின்பற்றவும்",
+      "ஒருங்கிணைந்த பூச்சி மேலாண்மை நடைமுறைகளை செயல்படுத்தவும்",
+      "மண் ஆரோக்கியத்திற்காக பயிர் சுழற்சியை கருத்தில் கொள்ளவும்",
+      "உள்ளூர் வேளாண் விரிவாக்க சேவைகளை அணுகவும்"
+    ],
+    "no_recommendation": "இன்னும் பரிந்துரைகள் இல்லை",
+    "no_recommendation_desc": "இயந்திர கற்றல் பகுப்பாய்வின் அடிப்படையில் தனிப்பட்ட பயிர் பரிந்துரையைப் பெற உங்கள் மண் மற்றும் காலநிலை நிலைமைகளை உள்ளிடவும்.",
+    "ai_analysis": "AI-இயங்கும் பகுப்பாய்வு",
+    "ai_analysis_desc": "இயந்திர கற்றல் பரிந்துரைகள்",
+    "personalized_results": "தனிப்பட்ட முடிவுகள்",
+    "personalized_results_desc": "உங்கள் நிலைமைகளின் அடிப்படையில்",
+    "detailed_insights": "விரிவான நுண்ணறிவு",
+    "detailed_insights_desc": "வளர்ச்சி குறிப்புகள் மற்றும் நன்மைகள்",
+    "expert_knowledge": "நிபுணர் அறிவு",
+    "expert_knowledge_desc": "வேளாண் சிறந்த நடைமுறைகள்",
+    "suitability_levels": {
+      "excellent": "சிறந்த",
+      "good": "நல்ல",
+      "average": "சராசரி",
+      "poor": "மோசமான"
+    },
+    "water_requirements": {
+      "low": "குறைவான",
+      "medium": "மத்திய",
+      "high": "அதிக"
+    },
+    "fallback": {
+      "growing_season": "உள்ளூர் வேளாண் நிபுணர்களை அணுகவும்",
+      "special_notes": "தரவுத்தளத்தில் பயிர் தகவல் கிடைக்கவில்லை",
+      "benefits": ["ML மாதிரி பரிந்துரை", "உங்கள் மண் நிலைமைகளுக்கு ஏற்றது"]
+    }
   },
   "lang": {
     "label": "மொழி",
